changed headers to .hpp

--- a/Src/CMakeLists.txt
+++ b/Src/CMakeLists.txt
@@ -7,11 +7,11 @@ MyHeuristics.cpp
 )
 
 SET(HEADERS
-MyNode.h
-MyAStar.h
-MyConnection.h
-MyGraph.h
-MyHeuristics.h
+MyNode.hpp
+MyAStar.hpp
+MyConnection.hpp
+MyGraph.hpp
+MyHeuristics.hpp
 )
 
 # Needed for Pyx Integration only
@@ -20,7 +20,7 @@ INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../Pyx.BDO/Sources/PyxBDO/json)
 LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/../Pyx/x64/Release)
 LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/../MyAStar/build/Src/Release)
 
-add_library(PyxMyAStarLib ${SOURCE} ${HEADERS} PyxMyAStar.cpp PyxMyAStar.h)
+add_library(PyxMyAStarLib ${SOURCE} ${HEADERS} PyxMyAStar.cpp PyxMyAStar.hpp)
 add_library(MyAStar ${SOURCE} ${HEADERS})
 add_executable(MyAStartest test.cpp)
 target_link_libraries(MyAStartest MyAStar)
